added echo mod for the pry ability

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -309,6 +309,7 @@
   "tetra.stats.execute_echo.tooltip": "The target is struck again after 3 seconds, dealing damage based on the target's missing health and harmful effects",
   "tetra.stats.slam_echo.tooltip": "Cause a secondary slam at the same point or on the same target after 3 seconds",
   "tetra.stats.puncture_echo.tooltip": "Punctures the target again after 3 seconds",
+  "tetra.stats.pry_echo.tooltip": "Hit the target with pry again after 3 seconds",
 
   "tetra.stats.execute": "Execute",
   "tetra.stats.execute.tooltip": "Hold right-click to charge up a powerful attack with §e100%% (%s)§f base damage, the damage is further increased by:\n§e%s%%§7 for each missing percent of the target's health\n§e%s%%§7 for each stack of any harmful effect on the target\n \n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
