--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -94,7 +94,7 @@
   "tetra.workbench.schematic_detail.tools_tooltip":"You do not have the tools required for this",
   "tetra.workbench.schematic_detail.level_tooltip": "Crafting this requires more experience levels than what you currently have",
 
-  "tetra.workbench.schematic_list.temporary": "Made available by an item in your inventory",
+  "tetra.workbench.schematic_list.temporary": "Made available due to an item in your inventory or from a nearby schematic",
 
   "tetra.repair_action.label": "Repair",
 
@@ -822,6 +822,8 @@
   "item.tetra.scroll.double/adze/warforge.description": "Contains various plans on how to make adzes more effective in combat, allows adzes to be improved in a workbench",
   "item.tetra.scroll.double/adze/warforge.description_extended": "§7[§8shift + rmb§7]§8 read more",
 
+  "item.tetra.scroll.warforge.details": "§l§nWarforging§r\n\nWarforging a double headed tool makes it much more effective in combat, this provides:\n\n + a §lpassive§r stat or effect based on the warforged head\n\n + a right-click §lability§r based on the left head\n\n + an ability §lmodifier§r based on the right head\r§l§nBattleaxes§r\n\n§lPassive:§r Severing\nAttacks have a chance to reduce the target's max health\n\n§lAbility:§r Execute\nDeals bonus damage based on missing health and harmful effects\n\n§lModifier:§r Overcharge\nAbilities can be charged up further to increase damage and improve effects\r§l§nWarhammers§r\n\n§lPassive:§r Crushing\nAttacks partially bypass armor and absorption effects\n\n§lAbility:§r Slam\nAttack a single target with a strong knockback, or hit multiple enemies in a large area\n\n§lModifier:§r Momentum\nCauses abilities to stun targets or knock them back further\r§l§nWar-picks§r\n\n§lPassive:§r Skewering\nAttacks deal bonus damage to unarmored targets\n\n§lAbility:§r Puncture\nReduces the target's armor or cause them to bleed\n\n§lModifier:§r Combo\nGain combo points from regular attacks which improves abilities\r§l§nTool butts§r\n\n§lPassive:§r Light\nProvides a significant speed increase but reduces tool efficiency\n\n§lAbility:§r None\n\n§lModifier:§r Light\nReduces ability charge time and cooldown\r§l§nClaws§r\n\n§lPassive:§r Armor pen.\nAttacks partially ignore armor\n\n§lAbility:§r Pry\nApplies a stacking armor reduction effect on the target\n\n§lModifier:§r Revenge\nImproves abilities when the wielder is at a disadvantage\r§l§nGuisarmes (hoes)§r\n\n§lPassive:§r Damage bonus\nIncreases overall weapon damage\n\n§lAbility:§r Overpower\nDeals high damage but exhausts both the target and the wielder\n\n§lModifier:§r Overextend\nAbilities are more effective but drains additional food\r§l§nWarsickles§r\n\n§lPassive:§r Sweeping\nIncreased sweep damage and range\n\n§lAbility:§r Reap\nHits targets in an area, kills empower the wielder\n\n§lModifier:§r Exhilaration\nEmpowers abilities when used successfully\r§l§nBattleadzes§r\n\n§lPassive:§r Damage bonus\nSignificantly increases damage for the adze head\n\n§lAbility:§r Lunge\nLunge forward and deal damage to the first target hit\n\n§lModifier:§r Defensive\nAbilities grant defensive bonuses when the item is used in the offhand",
+
   "item.tetra.scroll.effects": "Crafting Effect",
   "item.tetra.scroll.effects.description": "Provides some form of effect when tool parts are crafted or modified in a nearby workbench",
   "item.tetra.scroll.schematics": "Schematic",
@@ -1245,7 +1247,7 @@
   "tetra.module.sword/heavy_blade.prefix": "%s",
 
   "tetra.improvement.heavy_blade/crushing.name": "Crushing",
-  "tetra.improvement.heavy_blade/crushing.description": "Attacks partially ignore armor",
+  "tetra.improvement.heavy_blade/crushing.description": "Attacks partially bypass armor and absorption",
 
   "tetra/schematic/sword/machete.name": "Machete",
   "tetra/schematic/sword/machete.description": "Replace the current sword blade with a machete which can be used to cut down web and some types of plants in an area.\n \nThe §fcutting efficiency§r is based on the material, at an increased rate.\nMaterial §fhardness§r increases §fdamage§r.\nMaterial §fdensity§r slightly decreases §fattack speed§r.",
