feat: added an in-world schematic system that allows schematics to be placed/hung near a workbench to unlock new crafting options or to apply special effects feat: added throwing daggers, schematic found in dungeons feat: added howling blade fuller, schematic found in dungeons feat: added sturdy guard, allows limited blocking, schematic found in dungeons feat: added gilding, schematic found in nether fortresses, can be combined for stronger improvements feat: added material expertise treatises that may increase stats when crafting major modules, can be bought from villagers feat: added tool efficiency treatises that have a chance to reduce material usage, can be bought from villagers

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2524,6 +2524,22 @@
   "tetra.advancements.spelunking.refill_cell.description": "Use a transfer unit or a core extractor to fully charge a thermal cell",
   "tetra.advancements.spelunking.use_bolt.title": "Tweaked to Perfection",
   "tetra.advancements.spelunking.use_bolt.description": "Use a bolt to bind a tool or a sword, then use the tweak tab in a workbench to change the stats of the item",
+  "tetra.advancements.spelunking.find_scroll.title": "Acquired Knowledge",
+  "tetra.advancements.spelunking.find_scroll.description": "Find a scroll in the world or purchase one from a villager",
+  "tetra.advancements.spelunking.find_scroll_efficiency.title": "Frugal Crafting",
+  "tetra.advancements.spelunking.find_scroll_efficiency.description": "Purchase all of the treatises on tool efficiency from the villagers",
+  "tetra.advancements.spelunking.find_scroll_expertise.title": "Great Works",
+  "tetra.advancements.spelunking.find_scroll_expertise.description": "Purchase all of the treatises on material expertise from the villagers",
+  "tetra.advancements.spelunking.find_scroll_gild.title": "Arcane Additions",
+  "tetra.advancements.spelunking.find_scroll_gild.description": "Find a gilding scroll in a nether fortress",
+  "tetra.advancements.spelunking.find_scroll_howling.title": "Howling Blades",
+  "tetra.advancements.spelunking.find_scroll_howling.description": "Find a howling blade schematic in a dungeon",
+  "tetra.advancements.spelunking.find_scroll_sturdy.title": "Re-acquired Knowledge",
+  "tetra.advancements.spelunking.find_scroll_sturdy.description": "Find a sturdy guard schematic in a dungeon",
+  "tetra.advancements.spelunking.find_scroll_throwing.title": "Perfectly Balanced",
+  "tetra.advancements.spelunking.find_scroll_throwing.description": "Find a throwing knife schematic in a dungeon",
+  "tetra.advancements.spelunking.find_scroll_warforge.title": "Tools of War",
+  "tetra.advancements.spelunking.find_scroll_warforge.description": "Find a chapter of Tools of War in a bastion remnant, or barter for one with a piglin",
 
   "tetra.advancements.upgrades.root.title": "Basic Tinkering (§7Tetra§r)",
   "tetra.advancements.upgrades.root.description": "Craft a mallet from two sticks and two planks\n \nItem Reward: Holosphere",
