change: added crossbow entry in the holosphere

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -39,6 +39,7 @@
   "tetra.holo.craft.modular_single": "Single headed",
   "tetra.holo.craft.modular_bow": "Bows",
   "tetra.holo.craft.modular_shield": "Shields",
+  "tetra.holo.craft.modular_crossbow": "Crossbows",
   "tetra.holo.craft.slot": "Slot",
   "tetra.holo.craft.requirements": "Requirements",
   "tetra.holo.craft.improvements": "Improvements",
