feat: added module improvement details to the holosphere

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -42,15 +42,18 @@
   "tetra.holo.craft.modular_shield": "Shields",
   "tetra.holo.craft.modular_crossbow": "Crossbows",
   "tetra.holo.craft.slot": "Slot",
-  "tetra.holo.craft.requirements": "Requirements",
+  "tetra.holo.craft.material_requirement": "Can be crafted from %s",
   "tetra.holo.craft.improvements": "Improvements",
+  "tetra.holo.craft.improvement_button": "%s improvements",
   "tetra.holo.craft.stats": "Stats",
   "tetra.holo.craft.variants": "Variants",
   "tetra.holo.craft.variants_filter": "Input a string to filter out modules based on their name, prefix with # to filter based on material category.\n \n§7[§8f§7] §8focus\n§7[§8enter§7] §8toggle focus",
   "tetra.holo.craft.variants_sort": "Sort all variants based on the selected stat\n \n§7[§8s§7] §8toggle dropdown\n§7[§81§7] - §7[§89§7] §8select stat",
   "tetra.holo.craft.empty_description": "Description missing",
-  "tetra.holo.craft.translation": "Stats gained based on material properties for this module",
-  "tetra.holo.craft.empty_translation": "It is not known how material properties translate into stats for this module",
+  "tetra.holo.craft.translation_module": "Stats gained based on material properties for this module",
+  "tetra.holo.craft.empty_translation_module": "It is not known how material properties translate into stats for this module",
+  "tetra.holo.craft.translation_improvement": "Stats gained based on material properties for this improvement",
+  "tetra.holo.craft.empty_translation_improvement": "It is not known how material properties translate into stats for this improvement",
 
   "tetra.holo.craft.materials.stat.primary": "Hardness",
   "tetra.holo.craft.materials.stat.primary.short": "hard",
@@ -115,24 +118,31 @@
 
   "tetra.tool.hammer": "Hammer",
   "tetra.tool.hammer.requirement": "This action requires a tier %d hammer",
+  "tetra.tool.hammer.craft_requirement": "Crafting requires a tier %d hammer",
   "tetra.tool.hammer.material_requirement": "The base requirement for working this material is a tier %d hammer, the requirement may shift based on what the material is used for.",
   "tetra.tool.axe": "Axe",
   "tetra.tool.axe.requirement": "This action requires a tier %d axe",
+  "tetra.tool.axe.craft_requirement": "Crafting requires a tier %d axe",
   "tetra.tool.axe.material_requirement": "The base requirement for working this material is a tier %d axe, the requirement may shift based on what the material is used for.",
   "tetra.tool.pickaxe": "Pickaxe",
   "tetra.tool.pickaxe.requirement": "This action requires a tier %d pickaxe",
+  "tetra.tool.pickaxe.craft_requirement": "Crafting requires a tier %d pickaxe",
   "tetra.tool.pickaxe.material_requirement": "The base requirement for working this material is a tier %d pickaxe, the requirement may shift based on what the material is used for.",
   "tetra.tool.shovel": "Shovel",
   "tetra.tool.shovel.requirement": "This action requires a tier %d shovel",
+  "tetra.tool.shovel.craft_requirement": "Crafting requires a tier %d shovel",
   "tetra.tool.shovel.material_requirement": "The base requirement for working this material is a tier %d shovel, the requirement may shift based on what the material is used for.",
   "tetra.tool.hoe": "Cut",
-  "tetra.tool.hoe.requirement": "This action requires a tier %d hoeting implement.\n§7Most swords can be used for hoeting.",
-  "tetra.tool.hoe.material_requirement": "The base requirement for working this material is a tier %d cutting implement, the requirement may shift based on what the material is used for.\n§7Most swords can be used for cutting.",
+  "tetra.tool.hoe.requirement": "This action requires a tier %d hoe.",
+  "tetra.tool.hoe.craft_requirement": "Crafting requires a tier %d hoe.",
+  "tetra.tool.hoe.material_requirement": "The base requirement for working this material is a tier %d hoe, the requirement may shift based on what the material is used for.",
   "tetra.tool.cut": "Cut",
   "tetra.tool.cut.requirement": "This action requires a tier %d cutting implement.\n§7Most swords can be used for cutting.",
+  "tetra.tool.cut.craft_requirement": "Crafting requires a tier %d cutting implement.",
   "tetra.tool.cut.material_requirement": "The base requirement for working this material is a tier %d cutting implement, the requirement may shift based on what the material is used for.\n§7Most swords can be used for cutting.",
   "tetra.tool.pry": "Pry",
   "tetra.tool.pry.requirement": "This action requires a tier %d prying implement.\n§7Claws can be used for prying.",
+  "tetra.tool.pry.craft_requirement": "Crafting requires a tier %d prying implement.",
   "tetra.tool.pry.material_requirement": "The base requirement for working this material is a tier %d prying implement, the requirement may shift based on what the material is used for.\n§7Claws can be used for prying.",
 
   "tetra.tool.available": "You have tier %d available",
@@ -2355,26 +2365,8 @@
   "tetra/schematic/shield/plate/aerodynamic_trim.description": "Frame the shield with an aerodynamic trim which allows the shield to be thrown.",
   "tetra/schematic/shield/plate/aerodynamic_trim.slot1": "Material",
 
-  "tetra.improvement.shield/aerodynamic_trim_iron.name": "Aerodynamic trim §8(iron)",
-  "tetra.improvement.shield/aerodynamic_trim_iron.description": "Allows the shield to be thrown",
-  "tetra.improvement.shield/aerodynamic_trim_gold.name": "Aerodynamic trim §8(gold)",
-  "tetra.improvement.shield/aerodynamic_trim_gold.description": "Allows the shield to be thrown",
-  "tetra.improvement.shield/aerodynamic_trim_copper.name": "Aerodynamic trim §8(copper)",
-  "tetra.improvement.shield/aerodynamic_trim_copper.description": "Allows the shield to be thrown",
-  "tetra.improvement.shield/aerodynamic_trim_tin.name": "Aerodynamic trim §8(tin)",
-  "tetra.improvement.shield/aerodynamic_trim_tin.description": "Allows the shield to be thrown",
-  "tetra.improvement.shield/aerodynamic_trim_silver.name": "Aerodynamic trim §8(silver)",
-  "tetra.improvement.shield/aerodynamic_trim_silver.description": "Allows the shield to be thrown",
-  "tetra.improvement.shield/aerodynamic_trim_nickel.name": "Aerodynamic trim §8(nickel)",
-  "tetra.improvement.shield/aerodynamic_trim_nickel.description": "Allows the shield to be thrown",
-  "tetra.improvement.shield/aerodynamic_trim_lead.name": "Aerodynamic trim §8(lead)",
-  "tetra.improvement.shield/aerodynamic_trim_lead.description": "Allows the shield to be thrown",
-  "tetra.improvement.shield/aerodynamic_trim_electrum.name": "Aerodynamic trim §8(electrum)",
-  "tetra.improvement.shield/aerodynamic_trim_electrum.description": "Allows the shield to be thrown",
-  "tetra.improvement.shield/aerodynamic_trim_bronze.name": "Aerodynamic trim §8(bronze)",
-  "tetra.improvement.shield/aerodynamic_trim_bronze.description": "Allows the shield to be thrown",
-  "tetra.improvement.shield/aerodynamic_trim_steel.name": "Aerodynamic trim §8(steel)",
-  "tetra.improvement.shield/aerodynamic_trim_steel.description": "Allows the shield to be thrown",
+  "tetra.improvement.shield/aerodynamic_trim.name": "Aerodynamic %s trim",
+  "tetra.improvement.shield/aerodynamic_trim.description": "Allows the shield to be thrown.",
 
   "tetra/schematic/shield/plate/banner.name": "Banner",
   "tetra/schematic/shield/plate/banner.description": "Cover the face of the plate with a banner.",
