changed shield improvements to be material based

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2306,67 +2306,28 @@
   "tetra.improvement.grip_hone/durability.description": "Increases durability",
 
   "tetra/schematic/shield/plate/studs.name": "Studded plate",
-  "tetra/schematic/shield/plate/studs.description": "Nail studs into the shield plate to increase it's durability by a flat amount.",
+  "tetra/schematic/shield/plate/studs.description": "Nail studs into the shield plate to increase it's durability.",
   "tetra/schematic/shield/plate/studs.slot1": "Material",
 
-  "tetra.improvement.shield/studs_iron.name": "Studded §8(iron)",
-  "tetra.improvement.shield/studs_iron.description": "Increases durability by a flat amount",
-  "tetra.improvement.shield/studs_gold.name": "Studded §8(gold)",
-  "tetra.improvement.shield/studs_gold.description": "Increases durability by a flat amount",
-  "tetra.improvement.shield/studs_copper.name": "Studded §8(copper)",
-  "tetra.improvement.shield/studs_copper.description": "Increases durability by a flat amount",
-  "tetra.improvement.shield/studs_tin.name": "Studded §8(tin)",
-  "tetra.improvement.shield/studs_tin.description": "Increases durability by a flat amount",
-  "tetra.improvement.shield/studs_silver.name": "Studded §8(silver)",
-  "tetra.improvement.shield/studs_silver.description": "Increases durability by a flat amount",
-  "tetra.improvement.shield/studs_nickel.name": "Studded §8(nickel)",
-  "tetra.improvement.shield/studs_nickel.description": "Increases durability by a flat amount",
-  "tetra.improvement.shield/studs_lead.name": "Studded §8(lead)",
-  "tetra.improvement.shield/studs_lead.description": "Increases durability by a flat amount",
-  "tetra.improvement.shield/studs_electrum.name": "Studded §8(electrum)",
-  "tetra.improvement.shield/studs_electrum.description": "Increases durability by a flat amount",
-  "tetra.improvement.shield/studs_bronze.name": "Studded §8(bronze)",
-  "tetra.improvement.shield/studs_bronze.description": "Increases durability by a flat amount",
-  "tetra.improvement.shield/studs_steel.name": "Studded §8(steel)",
-  "tetra.improvement.shield/studs_steel.description": "Increases durability by a flat amount",
+  "tetra.improvement.shield/studs.name": "Studded §8(%s)",
+  "tetra.improvement.shield/studs.description": "Increases durability",
 
   "tetra/schematic/shield/plate/trim.name": "Trim edge",
-  "tetra/schematic/shield/plate/trim.description": "Frame the shield with a trim to increase it's durability, the durability bonus is multiplicative.",
+  "tetra/schematic/shield/plate/trim.description": "Frame the shield with a trim to increase it's durability.",
   "tetra/schematic/shield/plate/trim.slot1": "Material",
 
-  "tetra.improvement.shield/trim_iron.name": "Iron trim",
-  "tetra.improvement.shield/trim_iron.description": "Increases durability",
-  "tetra.improvement.shield/trim_gold.name": "Gold trim",
-  "tetra.improvement.shield/trim_gold.description": "Increases durability",
-  "tetra.improvement.shield/trim_copper.name": "Copper trim",
-  "tetra.improvement.shield/trim_copper.description": "Increases durability",
-  "tetra.improvement.shield/trim_tin.name": "Tin trim",
-  "tetra.improvement.shield/trim_tin.description": "Increases durability",
-  "tetra.improvement.shield/trim_silver.name": "Silver trim",
-  "tetra.improvement.shield/trim_silver.description": "Increases durability",
-  "tetra.improvement.shield/trim_nickel.name": "Nickel trim",
-  "tetra.improvement.shield/trim_nickel.description": "Increases durability",
-  "tetra.improvement.shield/trim_lead.name": "Lead trim",
-  "tetra.improvement.shield/trim_lead.description": "Increases durability",
-  "tetra.improvement.shield/trim_electrum.name": "Electrum trim",
-  "tetra.improvement.shield/trim_electrum.description": "Increases durability",
-  "tetra.improvement.shield/trim_bronze.name": "Bronze trim",
-  "tetra.improvement.shield/trim_bronze.description": "Increases durability",
-  "tetra.improvement.shield/trim_steel.name": "Steel trim",
-  "tetra.improvement.shield/trim_steel.description": "Increases durability",
-  "tetra.improvement.shield/trim_leather.name": "Leather trim",
-  "tetra.improvement.shield/trim_leather.description": "Increases durability",
-  "tetra.improvement.shield/trim_hide.name": "Hide trim",
-  "tetra.improvement.shield/trim_hide.description": "Increases durability",
-  "tetra.improvement.shield/trim_scrap.name": "Scrap trim",
-  "tetra.improvement.shield/trim_scrap.description": "Increases durability",
+  "tetra.improvement.shield/trim.name": "%s trim",
+  "tetra.improvement.shield/trim.description": "Increases durability",
+
+  "tetra.improvement.shield/trim/scrap.name": "Scrap trim",
+  "tetra.improvement.shield/trim/scrap.description": "Increases durability",
 
   "tetra/schematic/shield/plate/aerodynamic_trim.name": "Aerodynamic trim",
   "tetra/schematic/shield/plate/aerodynamic_trim.description": "Frame the shield with an aerodynamic trim which allows the shield to be thrown.",
   "tetra/schematic/shield/plate/aerodynamic_trim.slot1": "Material",
 
   "tetra.improvement.shield/aerodynamic_trim.name": "Aerodynamic %s trim",
-  "tetra.improvement.shield/aerodynamic_trim.description": "Allows the shield to be thrown.",
+  "tetra.improvement.shield/aerodynamic_trim.description": "Allows the shield to be thrown",
 
   "tetra/schematic/shield/plate/banner.name": "Banner",
   "tetra/schematic/shield/plate/banner.description": "Cover the face of the plate with a banner.",
