feat: crafting modules & improvements from wool now retains the wool color

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -635,6 +635,32 @@
   "tetra.material.warped.prefix": "Warped",
   "tetra.material.wool": "Wool",
   "tetra.material.wool.prefix": "Wool",
+  "tetra.material.wool_black": "Wool",
+  "tetra.material.wool_black.prefix": "Wool",
+  "tetra.material.wool_blue": "Wool",
+  "tetra.material.wool_blue.prefix": "Wool",
+  "tetra.material.wool_brown": "Wool",
+  "tetra.material.wool_brown.prefix": "Wool",
+  "tetra.material.wool_cyan": "Wool",
+  "tetra.material.wool_cyan.prefix": "Wool",
+  "tetra.material.wool_gray": "Wool",
+  "tetra.material.wool_gray.prefix": "Wool",
+  "tetra.material.wool_green": "Wool",
+  "tetra.material.wool_green.prefix": "Wool",
+  "tetra.material.wool_light_blue": "Wool",
+  "tetra.material.wool_light_blue.prefix": "Wool",
+  "tetra.material.wool_light_gray": "Wool",
+  "tetra.material.wool_light_gray.prefix": "Wool",
+  "tetra.material.wool_lime": "Wool",
+  "tetra.material.wool_lime.prefix": "Wool",
+  "tetra.material.wool_magenta": "Wool",
+  "tetra.material.wool_magenta.prefix": "Wool",
+  "tetra.material.wool_orange": "Wool",
+  "tetra.material.wool_orange.prefix": "Wool",
+  "tetra.material.wool_pink": "Wool",
+  "tetra.material.wool_pink.prefix": "Wool",
+  "tetra.material.wool_purple": "Wool",
+  "tetra.material.wool_purple.prefix": "Wool",
   "tetra.material.blackstone": "Blackstone",
   "tetra.material.blackstone.prefix": "Blackstone",
   "tetra.material.netherite": "Netherite",
