--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -210,7 +210,7 @@
   "tetra.stats.backstab.tooltip": "Hitting entities from behind cause critical hits that deal §e%s§r bonus damage",
 
   "tetra.stats.armor": "Armor",
-  "tetra.stats.armor.tooltip": "Provides §e%s§r armor when held",
+  "tetra.stats.armor.tooltip": "Provides §e%s§r armor when worn",
 
   "tetra.stats.toughness": "Toughness",
   "tetra.stats.toughness.tooltip": "Provides §e%s§r toughness when held",
@@ -661,6 +661,10 @@
   "tetra.material.wool_pink.prefix": "Wool",
   "tetra.material.wool_purple": "Wool",
   "tetra.material.wool_purple.prefix": "Wool",
+  "tetra.material.wool_red": "Wool",
+  "tetra.material.wool_red.prefix": "Wool",
+  "tetra.material.wool_yellow": "Wool",
+  "tetra.material.wool_yellow.prefix": "Wool",
   "tetra.material.blackstone": "Blackstone",
   "tetra.material.blackstone.prefix": "Blackstone",
   "tetra.material.netherite": "Netherite",
