added replacement recipes for ruins loot

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2560,10 +2560,10 @@
   "tetra.advancements.upgrades.hammer_3.description": "Craft a double-sided iron hammer, the iron hammer provides tier three hammering capabilities\n\n§7Can only be crafted in a workbench, requires a secondary hammer in your inventory to craft",
   "tetra.advancements.upgrades.hammer_4.title": "Hammer IV (Blackstone)",
   "tetra.advancements.upgrades.hammer_4.description": "Craft a double-sided blackstone hammer, the blackstone hammer provides tier four hammering capabilities\n\n§7An upgraded handle or a binding will provide enough integrity to support a blackstone hammer",
-  "tetra.advancements.upgrades.hammer_5.title": "Hammer V (Obsidian)",
-  "tetra.advancements.upgrades.hammer_5.description": "Craft a double-sided obsidian hammer using an upgraded forge hammer, the obsidian hammer provides tier five hammering capabilities\n\n§7Information about the forge hammer can be found in the spelunking advancements tab",
-  "tetra.advancements.upgrades.hammer_6.title": "Hammer VI (Netherite)",
-  "tetra.advancements.upgrades.hammer_6.description": "Craft a double-sided netherite hammer using a fully upgraded forge hammer, the netherite hammer provides tier six hammering capabilities",
+  "tetra.advancements.upgrades.hammer_5.title": "Hammer VI (Obsidian)",
+  "tetra.advancements.upgrades.hammer_5.description": "Craft a double-sided obsidian hammer, the obsidian hammer provides tier six (temp) hammering capabilities",
+  "tetra.advancements.upgrades.hammer_6.title": "Hammer VII (Netherite)",
+  "tetra.advancements.upgrades.hammer_6.description": "Craft a double-sided netherite hammer, the netherite hammer provides tier seven (temp) hammering capabilities",
   "tetra.advancements.upgrades.repairs.title": "[?] Repairing modular items",
   "tetra.advancements.upgrades.repairs.description": "Modular items can be repaired in a workbench.\n * Repairing an item will require materials (and appropriate tools) for one of its modules\n * Repairing will cycle over all of the item's modules\n * Repairing magically unstable modules will cost experience\n * Each repair fully restores the durability of the item",
   "tetra.advancements.upgrades.sword_hone.title": "Honed Blade",
